# objective-git

./: .gitignore  CMakeLists.txt
Classes/: GTRepository.h  GTRepository.m  GTTreeEntry.m
ObjectiveGitFramework.kitkit/: CMakeLists.txt
